[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "henonpy"
version = "1.0.0"
description = "A Python package for simulating and analyzing Henon-Heiles dynamical systems"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib>=3.9.2",
    "scikit-image>=0.25.2",
    "numiphy>=1.0",
]


[tool.setuptools]
packages = ["henonpy"]
